deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aaa
  labels:
    app: aaa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aaa
  template:
    spec:
      containers:
      - name: aaa
        image: me-west1-docker.pkg.dev/koala-ops-demo-373407/koala-repo/aaa:latest
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        ports:
        - containerPort: 8080
    metadata:
      labels:
        app: aaa
